--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "s": " nodemon app.js",
+    "start": " nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
